# StackUnderflow

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  flake.nix  lint.sh  pyproject.toml  requirements.txt  run_tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  docs.yml  lint.yml  publish.yml  test.yml
docs/: README-DEV.md  api-reference.md  claude-logs-structure-and-processing.md  cli-reference.md  codex-adapter-spec.md  cross-agent-knowledge-rfc.md  memory-and-latency-optimization.md  tests.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs/specs/: analytics-expansion.md  analytics-fixes.md  analytics-polish.md  beta-features.md
docs/superpowers/plans/: 2026-04-16-cli-commands.md  2026-04-19-session-store.md
docs/superpowers/specs/: 2026-04-19-session-store-design.md
stackunderflow/: __init__.py  __version__.py  cli.py  deps.py  server.py  settings.py  share.py
stackunderflow-site/: README.md  admin.html  admin.py  auth.py  build.py  gallery-site-server.py  index.html  local-dev-gallery-server.py  package.json  share-template.html  share.html
stackunderflow-site/functions/api/: shares.js
stackunderflow-site/static/css/: style.css
stackunderflow-site/static/js/: gallery.js
stackunderflow-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
stackunderflow-ui/src/: App.tsx  index.css  main.tsx
stackunderflow-ui/src/hooks/: useBetaFeatures.ts  useSortableTable.ts  useTheme.ts
stackunderflow-ui/src/pages/: Overview.tsx  ProjectDashboard.tsx  QADetailPage.tsx  Settings.tsx
stackunderflow-ui/src/services/: api.ts  format.ts  nameMode.ts  navigation.ts  ollama.ts  social.ts
stackunderflow-ui/src/types/: analytics.ts  api.ts  chat.ts  social.ts
stackunderflow/adapters/: __init__.py  base.py  claude.py  codex.py
stackunderflow/infra/: cache.py  costs.py  discovery.py  preloader.py
stackunderflow/ingest/: __init__.py  enumerate.py  writer.py
stackunderflow/pipeline/: __init__.py  aggregator.py  classifier.py  cross_project.py  dedup.py  enricher.py  formatter.py  history_reader.py  reader.py
stackunderflow/reports/: __init__.py  aggregate.py  optimize.py  render.py  scope.py
stackunderflow/routes/: __init__.py  bookmarks.py  commands.py  cost.py  data.py  misc.py  projects.py  qa.py  search.py  sessions.py  social.py  tags.py
stackunderflow/services/: __init__.py  agent_simulation_service.py  bookmark_service.py  curriculum_service.py  pricing_service.py  qa_service.py  related_service.py  search_service.py  social_service.py  tag_service.py
stackunderflow/static/react/: index.html
stackunderflow/stats/: __init__.py  aggregator.py  classifier.py
stackunderflow/store/: __init__.py  db.py  queries.py  schema.py  types.py
stackunderflow/store/migrations/: v001_initial.sql
tests/mock-data/-Users-test-dev-ai-music/: ba79134d-b6e9-4867-af0c-6941038c9e4b.jsonl  d3ad4cdc-5657-435d-98fa-0035d53e383d.jsonl  fed8ce56-bc79-401f-a83e-af084253362f.jsonl
tests/stackunderflow/: baseline_phase2.json  test_cli.py  test_cli_data_commands.py  test_performance.py  test_pricing_service.py  test_processor_data_verification.py  test_processor_optimization_correctness.py  test_qa_service_resolution.py  test_server.py  test_share.py  test_tag_service_intent.py
tests/stackunderflow-site/: test_admin.py
tests/stackunderflow/adapters/: contract.py  test_base.py  test_claude.py  test_codex.py  test_registry.py
tests/stackunderflow/store/: test_db.py  (+4 more)
(+117 files in other folders)
